[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/intro/DiscoArrival.gd" type="Script" id=1]
[ext_resource path="res://game/assets/bugs/Game_Bug8.png" type="Texture" id=2]
[ext_resource path="res://game/intro/Background-Outside2.png" type="Texture" id=4]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 300 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:cutoff")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 100.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.15, 0.15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.267943, 0.267943 ),
"update": 0,
"values": [ Vector2( 512, 300 ), Vector2( 272.842, 273.622 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.9, 1.4, 1.9, 2.4, 3 ),
"transitions": PoolRealArray( 0.267943, 0.267943, 0.267943, 0.267943, 0.267943, 0.267943, 0.267943 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, 5.0, -5.0, 5.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:cutoff")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 100.0, 600.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ) ]
}

[node name="DiscoArrival" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
position = Vector2( -4.76837e-07, 0 )

[node name="BackgroundOutside" type="Sprite" parent="Background"]
modulate = Color( 1, 0.8, 0.803333, 1 )
position = Vector2( 514.506, 292.794 )
scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 4 )

[node name="BugMate" type="Sprite" parent="."]
position = Vector2( 766.582, 367.816 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainerLeft" type="CenterContainer" parent="CanvasLayer/CenterContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="CenterContainerRight" type="CenterContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="NameCard" type="PanelContainer" parent="CanvasLayer/CenterContainer/CenterContainerRight"]
visible = false
margin_left = 248.0
margin_top = 293.0
margin_right = 262.0
margin_bottom = 307.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/CenterContainerRight/NameCard"]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 85.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/CenterContainerRight/NameCard/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Partyhost:"
align = 1

[node name="Name" type="LineEdit" parent="CanvasLayer/CenterContainer/CenterContainerRight/NameCard/VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 48.0
rect_min_size = Vector2( 200, 0 )
align = 1
placeholder_text = "Enter name..."

[node name="OK" type="Button" parent="CanvasLayer/CenterContainer/CenterContainerRight/NameCard/VBoxContainer"]
margin_left = 84.0
margin_top = 58.0
margin_right = 115.0
margin_bottom = 78.0
size_flags_horizontal = 4
text = "OK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/walk_in = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
rotating = true
current = true

[node name="BackgorundHueTween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/CenterContainer/CenterContainerRight/NameCard/VBoxContainer/OK" to="." method="_on_name_entered"]
[connection signal="tween_all_completed" from="BackgorundHueTween" to="." method="_on_BackgorundHueTween_tween_all_completed"]
